# triton-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  config.toml  dist-workspace.toml
.github/workflows/: coverage.yml  main.yml  release.yml
completions/: triton-tui.bash  triton-tui.elvish  triton-tui.fish  triton-tui.powershell  triton-tui.zsh
examples/: initial_state.json  non_determinism.json  program.tasm
src/: action.rs  args.rs  args_tests.rs  config.rs  element_type_hint.rs  main.rs  shadow_memory.rs  triton_tui.rs  triton_vm_state.rs  tui.rs
src/components/: help.rs  home.rs  memory.rs
wix/: main.wxs
