[package]
name = "triton-tui"

version = "0.2.0"
description = "Terminal User Interface to help debugging programs written for Triton VM."
readme = "README.md"

edition = "2021"
authors = ["Triton Software AG"]
license = "Apache-2.0"
homepage = "https://triton-vm.org/"
repository = "https://github.com/TritonVM/triton-tui"
documentation = "https://docs.rs/triton-tui/"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
better-panic = "0.3"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
color-eyre = "0.6"
config = "0.14"
crossterm = { version = "0.27", features = ["serde", "event-stream"] }
derive_deref = "1"
directories = "5"
fs-err = "2.11"
futures = "0.3"
human-panic = "1"
itertools = "0.12"
lazy_static = "1.4"
libc = "0.2"
ratatui = { version = "0.26", features = ["serde", "macros"] }
rexpect = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
triton-vm = "0.38.2"
tui-textarea = "0.4"

[dev-dependencies]
assert2 = "0.3"
pretty_assertions = "1.4"
proptest = "1.4"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.3.1"

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
clap_complete = "4.5"
directories = "5"
lazy_static = "1.4"

[features]
default = []
integration-tests = ["rexpect"]

[workspace.lints.clippy]
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
stable_sort_primitive = "warn"
unchecked_duration_subtraction = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"

[[bin]]
name = "triton-tui"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"
