[package]
name = "triton-tui"

version = "0.50.0" # keep this in sync with the version of Triton VM
description = "Terminal User Interface to help debugging programs written for Triton VM."
readme = "README.md"

edition = "2024"
rust-version = "1.85"
authors = ["Triton Software AG"]
license = "Apache-2.0"
homepage = "https://triton-vm.org/"
repository = "https://github.com/TritonVM/triton-tui"
documentation = "https://docs.rs/triton-tui/"

[package.metadata.wix]
upgrade-guid = "4B35A3BB-5E62-4D98-9548-7DB2141D4778"
path-guid = "BC323872-190B-4363-9BE0-3952D2437AB3"
license = false
eula = false

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
better-panic = "0.3"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
color-eyre = "0.6"
config = "0.15"
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
derive_deref = "1"
directories = "6"
fs-err = "3.1"
futures = "0.3"
human-panic = "2"
itertools = "0.14"
lazy_static = "1.5"
libc = "0.2"
ratatui = { version = "0.29", features = ["serde", "macros"] }
rexpect = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
triton-vm = "0.50.0"
tui-textarea = "0.7"

[dev-dependencies]
assert2 = "0.3"
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
test-strategy = "0.4"

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
clap_complete = "4.5"
directories = "6"
lazy_static = "1.5"

[features]
default = []
integration-tests = ["rexpect"]

[workspace.lints.clippy]
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
stable_sort_primitive = "warn"
unchecked_duration_subtraction = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"

[[bin]]
name = "triton-tui"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
